Add VSCode and Husky configs
