# swagger/courses/courses.yaml
@@ -13,7 +13,7 @@ components:
       bearerFormat: jwt
 
 paths:
-  /api/courses/create_course:
+  /api/v1/courses/create_course:
     post:
       summary: Create new course
       security:
@@ -33,19 +33,19 @@ paths:
           required: true
           schema:
             type: string
-            enum: [10H, 50H, 100H, 150H]
+            enum: ['10H', '50H', '100H', '150H']
         - in: query
           name: time
           required: true
           schema:
             type: string
-            enum: ["9:00-12:00", "12:00-15:00", "15:00-18:00", "18:00-21:00"]
+            enum: ['9:00-12:00', '12:00-15:00', '15:00-18:00', '18:00-21:00']
         - in: query
           name: status
           required: true
           schema:
             type: string
-            enum: [not started, in progress, completed]
+            enum: ['not started', 'in progress', 'completed']
       responses:
         200:
           description: Course created succussfully
@@ -53,8 +53,47 @@ paths:
             application/json:
               schema:
                 type: object
+                properties:
+                  name:
+                    type: string
+                    example: js
+                  duration:
+                    type: string
+                    example: 100H
+                  time:
+                    type: string
+                    example: 9:00-12:00
+                  status:
+                    type: string
+                    example: completed
+        404:
+          description: User dosent exists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: false
+                  message:
+                    type: string
+                    example: User dosent exists
+        500:
+          description: couldnt create course
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: false
+                  message:
+                    type: string
+                    example: Couldnt create course
 
-  /api/courses/update_course/{name}:
+  /api/v1/courses/update_course/{name}:
     put:
       summary: Update course info
       security:
@@ -88,16 +127,42 @@ paths:
           required: true
           schema:
             type: string
-            enum: ["not started", "in progress", "completed"]
+            enum: ['not started', 'in progress', 'completed']
       responses:
         200:
-          description: Course created succussfully
+          description: Course updated succussfully
           content:
             application/json:
               schema:
                 type: object
+                properties:
+                  name:
+                    type: string
+                    example: js
+                  duration:
+                    type: string
+                    example: 100H
+                  time:
+                    type: string
+                    example: 9:00-12:00
+                  status:
+                    type: string
+                    example: completed
+        404:
+          description: Couldnt update course
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: false
+                  message:
+                    type: string
+                    example: User dosent exists or course not found
 
-  /api/courses/delete_course/{name}:
+  /api/v1/courses/delete_course/{name}:
     delete:
       summary: Delete course
       security:
@@ -116,11 +181,27 @@ paths:
               schema:
                 type: object
                 properties:
+                  success:
+                    type: string
+                    example: true
                   message:
                     type: string
                     example: Course deleted succussfully
+        404:
+          description: Couldnt delete course
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: false
+                  message:
+                    type: string
+                    example: User dosent exists or course not found
 
-  /api/courses/show_courses:
+  /api/v1/courses/show_courses:
     get:
       summary: Show all courses
       responses:
@@ -129,9 +210,22 @@ paths:
           content:
             application/json:
               schema:
+                type: array
+        404:
+          description: Couldnt show courses
+          content:
+            application/json:
+              schema:
                 type: object
+                properties:
+                  success:
+                    type: string
+                    example: false
+                  message:
+                    type: string
+                    example: No course found
 
-  /api/courses/show_onecourse/{name}:
+  /api/v1/courses/show_onecourse/{name}:
     get:
       summary: show one course
       parameters:
@@ -147,3 +241,16 @@ paths:
             application/json:
               schema:
                 type: array
+        404:
+          description: Couldnt show course
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: string
+                    example: false
+                  message:
+                    type: string
+                    example: This course dosent exists
